[add] api list and create restaraunt menu

--- a/menus/templates/menus/category_list.html
+++ b/menus/templates/menus/category_list.html
@@ -26,7 +26,7 @@
                         <td>{{ menu_item.price }}</td>
                         <td>
                             {% if menu_item.image %}
-                                <img height=60px src="{{ menu_item.image.url }}">
+                                <img height="60px" src="{{ menu_item.image.url }}">
                             {% else %}
                                 Без фото
                             {% endif %}
